# service-monitoring

./: .gitignore  LICENSE  email_handler.py  main.py  pyproject.toml  readme.md  requirements.txt  service.py
service_monitoring/: __init__.py  __main__.py  email_handler.py  main.py  notion_handler.py  service.py
tests/: test_service_monitoring.py
